--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -23,3 +23,7 @@
 body {
   overflow-y: scroll;
 }
+
+.content-container {
+  margin-top: 75px;
+}
