--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -2,8 +2,8 @@
 
 .home-header-content {
     position: relative;
-    height: 100vh;
-    z-index: 0;
+    height: 88vh;
+    z-index: -10;
 }
 
 .gradient-overlay {
