--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,6 +5,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+  width: 100%;
+}
+
 :root {
   background-color: rgb(16, 16, 16);
   color: white;
